[closes #263] fixed background tab menu on ie8

--- a/site/ballando/assets/stylesheets/ballando_style.scss
+++ b/site/ballando/assets/stylesheets/ballando_style.scss
@@ -911,8 +911,6 @@ span.notify {
 .filter-menu-tag{
   padding: 10px 0 0 0;
   .comment-center{
-    background-color: rgba(107, 109, 109, 0.0);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
     h2{
       text-transform: uppercase;
     }
@@ -1359,10 +1357,6 @@ height: 100%;
 
 .profile-menu{
   padding: 10px 0 0 0;
-  .comment-center{
-    background-color: rgba(107, 109, 109, 0.0);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
-  }
 }
 
 .flex-direction-nav{
@@ -1370,7 +1364,6 @@ height: 100%;
 }
 
 .comment-center{ 
-  background-color: #6b6d6d;
   border: 4px solid transparent;
   a{
     line-height: 50px;
